# openrouterai

./: .gitignore  Dockerfile  README.md  app.py  build_and_push.ps1  build_and_push.sh  main.py  models.db  pyproject.toml  requirements.txt
k8s/: kubernetes-deployment.yaml  kubernetes-ingress.yaml  kubernetes-service.yaml
