[project]
name = "openrouterai"
version = "0.1.0"
description = "A FastAPI-based application for managing and querying AI model metadata. It supports daily database updates, periodic checks for database freshness, and containerization for deployment."
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["httpx", "fastapi", "uvicorn", "fastmcp"]
